Fix styles for dark mode for forms

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -234,6 +234,13 @@ input[type=checkbox]:checked {
     border-bottom-right-radius: 0.375rem;
 }
 
+.dark .input-symbol-currency:after,
+.dark .input-symbol-rate:after {
+    background: rgba(49, 58, 85, 1);
+    color: #ffffff;
+    border: 1px solid rgba(49, 58, 85, 1);
+}
+
 .input-symbol-currency:after {
     content: "$";
 }
